tests/compile_fail/bind_into_missing_output_parameter/main.cpp
#include "yorch/bind.hpp"

int main() {
    auto task = yorch::bind_into<int>(
        []() noexcept -> yorch::step_result {
            return yorch::step_result::success();
        });

    (void)task;
    return 0;
}
